Test/errors/err_discard_underscore_compound.cb
// `_` only supports the plain `=` discard form, not compound assignment.
extern int main()
{
    expect_error("'_' is a discard target");
    _ += 5;
}
